# chipster

./: .gitignore  .travis.yml  Cargo.toml  README.md  chipster-b65b5eecc4e27af6.wasm  index.html  test_all.sh
asm/: Cargo.toml
asm/src/: lib.rs  parse.rs  translate.rs
asm/src/parse/: instruction.rs  label.rs  mod.rs  program.rs  stmt.rs
chip8/: Cargo.toml
chip8/src/: display.rs  instruction.rs  lib.rs  regfile.rs  stack.rs  vm.rs
chip8/tests/: expected.mem  snapshot.rs
chip8/tests/expected/: 15PUZZLE.mem  BLINKY.mem  BLITZ.mem  BRIX.mem  CONNECT4.mem  GUESS.mem  HIDDEN.mem  INVADERS.mem  KALEID.mem  MAZE.mem  MERLIN.mem  MISSILE.mem  PONG.mem  PONG2.mem  PUZZLE.mem  SYZYGY.mem  TANK.mem  TETRIS.mem  TICTAC.mem  UFO.mem  VBRIX.mem  VERS.mem  WIPEOFF.mem
chipster/: Cargo.toml
chipster/src/: beep.rs  display.rs  emscripten.rs  main.rs  render.rs
chipster/src/looper/: emscripten.rs  mod.rs
src/: audio.rs  beep.rs  main.rs  stack.rs
src/chip8/: mod.rs  vm.rs
static/: chipster-b65b5eecc4e27af6.js  index.html
tests/: chip8_suite.rs
vm/: Cargo.toml
vm/src/: instruction.rs  lib.rs  stack.rs  timer.rs  vm.rs
